# robot_sim

./: .gitignore  Dockerfile  README.md  bringup.launch  planning_and_navigation.launch
.github/workflows/: auto_clang_format.yml  build_docker_image_and_push.yml
docker/: Dockerfile  build_packages.sh
src/cleaning_sequence/: CMakeLists.txt  package.xml
src/cleaning_sequence/config/: cleaning_sequence.yaml
src/cleaning_sequence/include/cleaning_sequence/: cleaning_sequence.hpp  move_arm_to_pose.hpp  move_to_destination.hpp  set_gripper_state.hpp
src/cleaning_sequence/launch/: cleaning_sequence.launch
src/cleaning_sequence/src/: cleaning_sequence.cpp  move_to_destination.cpp  set_gripper_state.cpp
src/robot_simulator/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_simulator/robot_gazebo/launch/: control.launch  description.launch  husky.launch  husky_empty_world.launch  spawn_husky.launch
src/robot_simulator/robot_gazebo/src/: gazebo_rh_pub.cpp  husky_ur3_control_joint.py
src/robot_simulator/robot_gazebo/urdf/: decorations.urdf.xacro  husky.urdf.xacro  husky_ur3_gripper.urdf.xacro  rh_p12_rn.xacro  rh_p12_rn_gripper.xacro  ur3.urdf.xacro  ur3_gripper.urdf.xacro  ur3_robot.urdf.xacro  ur3_robot_gripper.urdf.xacro  wheel.urdf.xacro
src/robot_simulator/robot_gazebo/urdf/accessories/: sensor_arch.urdf.xacro  sick_tim571.urdf.xacro
src/robot_simulator/robot_moveit_config/: package.xml
src/robot_simulator/robot_moveit_config/launch/: Omni_control.launch  husky_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/robot_simulator/robot_navigation/: CMakeLists.txt  package.xml
src/robot_simulator/robot_navigation/launch/: husky.launch  move_base.launch
