<?xml version="1.0"?>
<package format="2">
  <name>cleaning_sequence</name>
  <version>0.0.1</version>
  <description>The cleaning_sequence package</description>
  <maintainer email="yuanqichau@gmail.com">Chau Yuan Qi</maintainer>
  <license>To Do</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>geometric_shapes</depend>
  <depend>visualization_msgs</depend>
</package>
